# ai_cloud_cost_negotiator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
mock_data/: aws_bill.json
src/: agent.py  config.py  negotiation_sim.py
src/tools/: bill_analyzer.py  savings_finder.py
